<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_usuario" />

    <EditText
        android:id="@+id/inserirEmailHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/senha_usuario" />

    <EditText
        android:id="@+id/inserirSenhaHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_senha"
        android:inputType="textPersonName"
        android:password="true" />

    <Button
        android:id="@+id/btnHomeLogar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_logar_conta" />

    <Button
        android:id="@+id/btnCriarHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_criar_conta" />
</LinearLayout>